# my-microservices

./: .gitignore  CMakeLists.txt  Dockerfile  main.cpp
.github/workflows/: ci-cd.yaml
k8s/: deployment.yaml  service.yaml
